# OpenPoseUserCode

./: CMakeLists.txt  README.md  build.sh  faceFinderStreamer.cpp  personLocator.cpp  realsenseIntegration.cpp  realsense_synchronous_input.cpp  simpleStreamer.h  siotest.cpp
includes/: faceDetector.hpp
